<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_MKS_925" Id="{326e9f8e-ca6d-499b-833c-5f81933531e2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MKS_925
VAR_INPUT
	stVolume : ST_Volume;
END_VAR
VAR_OUTPUT
END_VAR
VAR_IN_OUT
	stGauge	:	ST_MKS_925;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* 
MKS 925 Vacuum gauge

A vacuum gauge takes as input, the pressure of the volume it is attached to,
and produces on its analog output, a corresponding voltage.

A.Pai
3/29/2017
*)

IF stGauge.q_xGaugeConnected THEN//If gauge is connected

	(*set gauge real pressure based on chamber real pressure*)
	stGauge.rPress := stVolume.rPressure;
	(*set gauge raw pressure based on transformation of real pressure*)
	stGauge.q_iRawPress := M_MKS_925(stGauge);// gauge on

ELSE//gauge gets disconnected

	stGauge.rPress := 0;
	stGauge.q_iRawPress := 0; // gauge not on ??

END_IF]]></ST>
    </Implementation>
    <Method Name="M_MKS_925" Id="{c735eda5-b21f-47c1-a9cd-c73186e26980}">
      <Declaration><![CDATA[METHOD PRIVATE M_MKS_925 : INT
VAR_INPUT
	stGauge	:	ST_MKS_925;
END_VAR
VAR
	rVoltage	:	REAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*
MKS 925 voltage calculation 

Does the inverse of the FB 925 from the vacuum library

A. Pai, 2017-1-13
*)


(*Calculate signal based on voltage*)
IF stGauge.rPress <> 0 THEN
	
	(*Calculate volatage based on real pressure*)
	rVoltage:= LOG(stGauge.rPress) + 6;
	(*Calculate signal based on voltage*)
	M_MKS_925	:= REAL_TO_INT( rVoltage * 32767/10 );
	
ELSE
	M_MKS_925 := 0;
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_MKS_925">
      <LineId Id="15" Count="5" />
      <LineId Id="52" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="28" Count="1" />
      <LineId Id="50" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="48" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_MKS_925.M_MKS_925">
      <LineId Id="6" Count="18" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>